fix: 更新Notion数据库ID并修复代码格式问题
修复config.ini中的Notion数据库ID配置
清理多个文件中的多余空格和格式问题
更新下载日志文件内容

--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,7 @@ keep_original_video = true
 [Notion]
 enable_notion_sync = true
 ; 改为数据库 ID (从 News List 数据库 URL 获取)
-database_id = your_database_id_here
+database_id = 2f5fb8a27c888002aa05f8b3b4c4bfa6
 auto_sync_after_download = true
 retry_failed = false
 
